[package]
name = "table_top_ex"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "table_top_ex"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.21.1"
lazy_static = "1.0"
serde_json = "1.0.61"
bincode = "1.3.1"
lib_table_top = { git = "https://github.com/FlyingDutchmanGames/lib_table_top" }
